# topovision

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_mesh_from_json.py
src/: __init__.py  main.py
src/OCR/: visualizer.py
src/OCR/engine/: __init__.py  easyocr_engine.py  mock_ocr_engine.py  ocr_engine.py  paddleocr_engine.py  tesseract_engine.py
src/contour/: __init__.py  utils.py
src/contour/engine/: __init__.py  contour_engine.py  cv2_contour_engine.py  mask2former_engine.py  unet_contour_engine.py
src/dataVisualization/: README.md  dataHelpers.py  data_source.md  data_source.txt  example.py  processData.py  run.sh  source.txt  vis.py
src/dataVisualization/dataExample/N63E016/: N63E016.dbf  N63E016.shx
src/dataVisualization/output/new/example_output/N63E016/: N63E016_0000_labels.json  N63E016_0001_labels.json  N63E016_0002_labels.json  N63E016_0003_labels.json  N63E016_0004_labels.json  N63E016_0005_labels.json  N63E016_0006_labels.json  N63E016_0007_labels.json  N63E016_0008_labels.json  N63E016_0009_labels.json  N63E016_0010_labels.json  N63E016_0011_labels.json  N63E016_0012_labels.json  N63E016_0013_labels.json  N63E016_0014_labels.json  N63E016_0015_labels.json  N63E016_0016_labels.json  N63E016_0017_labels.json  N63E016_0018_labels.json  N63E016_0019_labels.json  N63E016_0020_labels.json  N63E016_0021_labels.json  N63E016_0022_labels.json  N63E016_0023_labels.json  N63E016_0024_labels.json  N63E016_0025_labels.json  N63E016_0026_labels.json  N63E016_0027_labels.json  N63E016_0028_labels.json  N63E016_0029_labels.json  N63E016_0030_labels.json  N63E016_0031_labels.json  N63E016_0032_labels.json  N63E016_0033_labels.json  N63E016_0034_labels.json  N63E016_0035_labels.json  N63E016_0036_labels.json  N63E016_0037_labels.json  N63E016_0038_labels.json  N63E016_0039_labels.json  (+1664 more)
src/dataVisualization/output/quick_test/N63E016/images/: N63E016_r00_c00_labels.json  N63E016_r00_c01_labels.json  N63E016_r00_c02_labels.json  N63E016_r00_c03_labels.json  N63E016_r00_c04_labels.json  N63E016_r00_c05_labels.json  N63E016_r00_c06_labels.json  N63E016_r00_c07_labels.json  N63E016_r00_c08_labels.json  N63E016_r00_c09_labels.json  N63E016_r00_c10_labels.json  N63E016_r00_c11_labels.json  N63E016_r00_c12_labels.json  N63E016_r00_c13_labels.json  N63E016_r00_c14_labels.json  N63E016_r00_c15_labels.json  N63E016_r00_c16_labels.json  N63E016_r00_c17_labels.json  N63E016_r00_c18_labels.json  (+171 more)
src/data_generation/: __init__.py  coco_exporter.py  data_source.md  main.py  perlin_noise_generator.py  tile_generator.py
src/data_pipeline/: __init__.py  data_source.md
src/height_extraction/: README.md  __init__.py  contours.py  inference.py  matcher.py  mesh_generation.py  pipeline.py  schemas.py
src/height_extraction/engine/: __init__.py  contour_engine.py  cv2_contour_engine.py
src/lineExtraction/: run.py
src/training/: README.md  __init__.py  augmentations.py  config.py  dataset.py  evaluate_model.py  losses.py  modal_train.py  test_model.py  train.py
src/training/common/: __init__.py
src/training/mask2former/: README.md  __init__.py  config.py  dataset.py  inference.py  modal_train.py  train.py
src/training/unet/: __init__.py  dataset.py  modal_train.py  train.py
src/visualization/: __init__.py  plotter.py  point_cloud.py  surface.py
tests/: conftest.py  test_coco_exporter.py  test_contour_dataset.py  test_cv2_contour_engine.py  test_dice_bce_loss.py  test_inference.py  test_mask2former_contour_engine.py  test_mask2former_dataset.py  test_matcher.py  test_mesh_generation.py  test_mesh_generation_manual.py  test_pipeline.py  test_placeholder.py  test_tile_generator.py  test_unet_contour_engine.py
tools/: run_demo.py  smoke_paddleocr.py  validate_mesh_generation.py  verify_matching.py  visualize_paddleocr.py
