[project]
name = "topovision"
version = "0.1.0"
description = "Topovision is a tool for extracting data from topographic maps."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
data-generation = [
    "matplotlib>=3.10.7",
    "noise>=1.2.2",
    "numpy>=2.3.5",
]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "D",   # pydocstyle
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"
