[project]
name = "topovision"
version = "0.1.0"
description = "Topovision is a tool for extracting data from topographic maps."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.25.0",
    "albumentations>=1.3.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "easyocr>=1.7.2",
    "huggingface-hub>=0.20.0",
    "opencv-python-headless>=4.8.0",
    "open3d>=0.19.0",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "pycocotools>=2.0.0",
    "pydantic>=2.12.5",
    "pytesseract>=0.3.13",
    "scipy>=1.16.3",
    "segmentation-models-pytorch>=0.3.0",
    "timm>=0.9.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "tensorboard>=2.20.0",
]

[dependency-groups]
training = ["tensorboard>=2.12.0", "torchvision>=0.15.0"]
data-generation = [
    "matplotlib>=3.10.7",
    # Note: The 'noise' package only provides source distribution and requires
    # a C compiler to build. Ensure you have appropriate build tools installed
    # (e.g., gcc on Linux, Xcode Command Line Tools on macOS, or Visual C++
    # Build Tools on Windows).
    "noise>=1.2.2",
    "numpy>=2.3.5",
]
data-visualization = ["geopandas>=1.0.0", "matplotlib>=3.10.7", "numpy>=2.3.5"]
cloud = ["modal>=0.73.0"]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "D",   # pydocstyle
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D"]
"**/tests/*" = ["D"]
"test_*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
